@@ -68,6 +68,9 @@
 539700, a^2 - 17), Mod(-600624098797*a - 2476436600713, a^2 - 17)]
 [Mod(-4*a + 32, a^2 - 17), Mod(-192*a + 972, a^2 - 17), Mod(-2*a + 16, a^2 -
  17), Mod(-6688*a + 29440, a^2 - 17)]
+[Mod(a, a^2 - 7), Mod(0, a^2 - 7), Mod(0, a^2 - 7), Mod(-9, a^2 - 7), Mod(0,
+ a^2 - 7)]
+[2, -9, Mod(a, a^2 - 7), 0]
 2268
 54
 [9, [3, 3], [[Mod(-2, a^2 - a + 1), Mod(-3*a + 2, a^2 - a + 1)], [Mod(0, a^2
@@ -81,4 +84,4 @@
 4
 [10, [10], [[Mod(a^2, a^3 - a^2 + 1), Mod(-2*a^2 + 1, a^3 - a^2 + 1)]]]
 0.33753547062081148560344962283967451356
-Total time spent: 572
+Total time spent: 763
